# email2rss

./: .env.example  .env.oauth.example  .gitignore  Dockerfile  Dockerfile.fetch_and_generate  Dockerfile.serve  Makefile  README.md  common.py  database.py  debug_reader.py  docker-compose.yaml  dotenv  email_fetcher.py  entrypoint.sh  feed_converter.py  feed_generator.py  feed_server.py  img_proxy.py  pyproject.toml  reader.py  readme.md  start.py  static_serve.py  util.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  security.yml
docs/superpowers/plans/: 2026-04-20-test-foundation.md  2026-04-21-fetcher-reliability.md  2026-04-21-landing-redesign.md  2026-04-21-reader-features.md  2026-04-21-reader-security-hardening.md
docs/superpowers/specs/: 2026-04-20-test-foundation-design.md  2026-04-21-fetcher-reliability-design.md  2026-04-21-landing-redesign-design.md  2026-04-21-reader-features-design.md  2026-04-21-reader-security-hardening-design.md
static/: reader.css  reader.js
templates/: _cards.html  article.html  article_list.html  base.html  index.html  list.html  search_results.html
tests/: conftest.py  test_common.py  test_database.py  test_email_fetcher.py  test_feed_generator.py  test_feed_server.py  test_img_proxy.py  test_reader.py  test_util.py
tests/fixtures/emails/: sample_multipart.eml
