[tool.poetry]
name = "email2rss"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[project]
name = "email2rss"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "feedgen>=1.0.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.30",
]
readme = "README.md"
requires-python = ">= 3.8"


[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/email2rss"]

[tool.poetry.dependencies]
python = "^3.8"
feedgen = "^1.0.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
