[tool.poetry]
name = "email2rss"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[project]
name = "email2rss"
version = "0.1.1"
description = "Add your description here"
dependencies = [
    "feedgen>=1.0.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.30",
    "defusedxml>=0.7.1",
]
readme = "README.md"
requires-python = ">= 3.9"


[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/email2rss"]

[tool.poetry.dependencies]
python = "^3.9"
feedgen = "^1.0.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
defusedxml = "^0.7.1"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "S"]

[tool.ruff.lint.per-file-ignores]
"debug_reader.py" = ["S"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

