[tool.poetry]
name = "email2rss"
version = "0.3.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[project]
name = "email2rss"
version = "0.3.0"
description = "Add your description here"
dependencies = [
    "feedgen>=1.0.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.30",
    "defusedxml>=0.7.1",
    "flask>=3.0,<4.0",
    "gunicorn>=22.0,<24.0",
    "opentelemetry-distro>=0.50b0,<1.0",
    "opentelemetry-exporter-otlp>=1.29,<2.0",
    "opentelemetry-instrumentation-flask>=0.50b0,<1.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0,<1.0",
    "opentelemetry-instrumentation-requests>=0.50b0,<1.0",
    "opentelemetry-instrumentation-logging>=0.50b0,<1.0",
    "requests (>=2.33.0)",
    "bleach (>=6.2,<7)",
    "tinycss2 (>=1.5.1,<2.0.0)",
    "lxml>=6.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "pytest>=8.0,<10",
    "pytest-cov>=5.0,<8",
]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/email2rss"]

[tool.poetry.dependencies]
python = "^3.10"
feedgen = "^1.0.0"
python-dotenv = "^1.2.2"
sqlalchemy = "^2.0.30"
defusedxml = "^0.7.1"
flask = ">=3.0,<4.0"
gunicorn = ">=22.0,<24.0"
opentelemetry-distro = ">=0.50b0,<1.0"
opentelemetry-exporter-otlp = ">=1.29,<2.0"
opentelemetry-instrumentation-flask = ">=0.50b0,<1.0"
opentelemetry-instrumentation-sqlalchemy = ">=0.50b0,<1.0"
opentelemetry-instrumentation-requests = ">=0.50b0,<1.0"
opentelemetry-instrumentation-logging = ">=0.50b0,<1.0"
requests = ">=2.33.0"
bleach = ">=6.2,<7"
lxml = ">=6.1.0"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "S"]

[tool.ruff.lint.per-file-ignores]
"debug_reader.py" = ["S"]
"tests/*" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["."]
addopts = "-ra --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

